--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     def okhttp_version = "4.9.3"
     def play_services_base_version = "18.0.1"
     def swipe_refresh_layout = "1.1.0"
+//    def glide_version = "4.13.2"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -82,6 +83,7 @@ dependencies {
     implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
     implementation "com.google.android.gms:play-services-base:$play_services_base_version"
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:$swipe_refresh_layout"
+    implementation "com.github.bumptech.glide:glide:4.13.2"
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
