--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,14 +2,15 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
+apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 33
 
     defaultConfig {
         applicationId "ru.netology.nmedia"
         minSdkVersion 22
-        targetSdkVersion 31
+        targetSdkVersion 33
         versionCode 1
         versionName "1.0"
 
@@ -44,8 +45,8 @@ android {
 }
 
 dependencies {
-    def core_version = "1.8.0"
-    def appcompat_version = "1.4.2"
+    def core_version = "1.9.0"
+    def appcompat_version = "1.5.1"
     def constraintlayout_version = "2.1.4"
     def swiperefreshlayout_version = "1.1.0"
     def coordinatorlayout_version = "1.2.0"
@@ -53,10 +54,10 @@ dependencies {
     def junit_version = "4.13.2"
     def ext_junit_version = "1.1.3"
     def espresso_core_version = "3.4.0"
-    def activity_version = "1.5.1"
+    def activity_version = "1.6.0"
     def lifecycle_version = "2.5.1"
-    def mdc_version = "1.6.1"
-    def nav_version = "2.4.1"
+    def mdc_version = "1.7.0"
+    def nav_version = "2.5.2"
     def room_version = "2.4.3"
     def firebase_version = "30.3.1"
     def glide_version = "4.13.2"
@@ -65,6 +66,8 @@ dependencies {
     def okhttplogging_version = "4.10.0"
     def coroutines_version = "1.6.4"
     def play_services_base_version = "18.1.0"
+    def imagepicker_version = "2.1"
+    def hilt_version = "2.40.1"
 
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
@@ -93,8 +96,10 @@ dependencies {
     implementation "com.github.bumptech.glide:glide:$glide_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "com.google.android.gms:play-services-base:$play_services_base_version"
-    implementation "com.github.dhaval2404:imagepicker:2.1"
+    implementation "com.github.dhaval2404:imagepicker:$imagepicker_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-play-services:$coroutines_version"
+    implementation "com.google.dagger:hilt-android:$hilt_version"
+    kapt "com.google.dagger:hilt-compiler:$hilt_version"
 
     testImplementation "junit:junit:$junit_version"
     androidTestImplementation "androidx.test.ext:junit:$ext_junit_version"
